BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Master_File_Material_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO Oct 2013: Object part of the Field Force Meeting module for BMS EMEA. Child object of Master File to store Materials to be delivered as part of the related Meetings.</description>
    <fields>
        <fullName>BMS_EMEA_Master_File_Material__c</fullName>
        <defaultValue>true</defaultValue>
        <description>VPRO Feb 2014: Checkbox always defined as true. Related to Requirement 806. The checkbox will then be used as reference for a Checkbox in Meetings. The Meeting Materials will have a ticked checkbox of they are inherited from the Master File.</description>
        <label>Master File Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO Feb 2014: external ID used for data loading</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_File_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: parent Master File of the record.</description>
        <label>Master File</label>
        <referenceTo>Master_File_BMS_EMEA__c</referenceTo>
        <relationshipLabel>Master File Materials</relationshipLabel>
        <relationshipName>Master_File_Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Material_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: Material Name</description>
        <inlineHelpText>Including presentations, invitations and other items - Description</inlineHelpText>
        <label>Material</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_No_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: Ref No (e.g. Mercury/Job bag) of the Material.</description>
        <inlineHelpText>e.g. Mercury/Job bag</inlineHelpText>
        <label>Ref No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BMS_EMEA__c</fullName>
        <description>TT 30/10/2013: Status of the Material in Mercury (external tool, no interface)</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>To be approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Master File Material</label>
    <nameField>
        <displayFormat>MFM-{00000}</displayFormat>
        <label>Master File Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master File Materials</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Master_File_Material</fullName>
        <active>true</active>
        <description>EMEA Record type to support Master File Materials</description>
        <label>BMS - EMEA - Master File Material</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>